		  completed downloads are listed.
		* Context menu for download items only enables relevant
		  information now.
		* Context menu little optimization (removed an unuseful loop)
		  and Open File fix.
		* Added bitmap button wich pops-up the last status log line
		  (useful when it doesn't fit the window).
		* Merged Preview and Open File and enabled Open File.
		* Moved "Always filter bad IPs" from Server to Security
		  in Preferences
		* Changed "Preference" in servers tab as suggested by Sir
		* Fixed: Servers priority now working (reported by Sir)
		* Fixed: Now all unset Server Priorities are set to normal
		  (reported by plaenky)
		* Fixed: Sorting Servers by priority works now.
		* Fixed: Setting "A4AF to others" works now.
		* Fixed: Server names sorting now differences between names and IPs

	Phoenix:
		* Lots of unicode fixes.
		* Added readline and history support to amuleweb/amulecmd text
		  clients.
		* Added template loading capability to amuleweb with the new
		  command line parameter -t.
		* Changed m4/readline.m4 so that readline libs are only used
		  when needed, i.e., no longer append readline libs to LIBS,
		  use READLINE_LIBS instead.
		* Fixed crash in aMule when amuleweb tried to get transfers
		  tab and aMule had never connected to a server before.
		* New backtrace output with demangled function names, file
		  names and line numbers, when possible.
		* Initial (not functional yet) SOCKS5 proxy support.
		* Initial (not functional yet) SOCKS4 proxy support.
		* Initial (not functional yet) HTTP proxy support.
		* Updated some tests in configure.in.

	GonoszTopi:
		* Initial work on EC protocol version 2.0.
		* Fixed a crash on broken language files (.po)
		* Some GUI cosmetics.
		* Lots of translation fixes.
		* As a side effect, fixed the "Any" search in webserver.
		* Fixed webserver connection with empty passwords :)
		* Fixed webserver connection with guest account

        Special Thanks To:
